evaluation-run/608/k8s/prod/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: microservice-demo
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
  selector:
    app: api-gateway
