evaluation-run/608/k8s/prod/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: microservice-demo
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
