evaluation-run/608/k8s/prod/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: microservice-demo
  labels:
    app: user
spec:
  type: ClusterIP
  ports:
    - name: "8080"
      port: 8080
      targetPort: 50051
  selector:
    app: user
